feat(AS-348): :sparkles: Add Templates List Header component;

--- a/src/pages/templates/index.astro
+++ b/src/pages/templates/index.astro
@@ -1,6 +1,7 @@
 ---
 import BaseHtml from '@layouts/BaseHtml.astro';
 import settings from '@base/settings.json';
+import Templates from '@components/Templates';
 
 const { title, description, image, slug } = settings.site.metadata.templates;
 ---
